--- a/style.css
+++ b/style.css
@@ -1,5 +1,32 @@
-.container{display:flex; flex-direction:column; justify-content:space-between; align-items:center; height:70vh}
-.gameboard{display:grid; grid-template-rows: repeat(3, 1fr);
-grid-template-columns:repeat(3, 1fr);
-width:50vw; height:50vh; background-color:black; gap:5px; border:1px solid lightgray}
-.gameCell{background-color:white}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 70vh
+}
+
+.gameboard {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  width: 50vw;
+  height: 50vh;
+  background-color: black;
+  gap: 5px;
+  border: 1px solid lightgray
+}
+
+.gameCell {
+  background-color: white;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size: 200%
+}
+
+.scoreboard {
+  display: flex;
+  width: 20vw;
+  justify-content: space-between
+}
